--- a/src/index.template.html
+++ b/src/index.template.html
@@ -7,7 +7,18 @@
   </title>
 
   <meta charset="utf-8" />
-  <meta name="description" content="<%= productDescription %>" />
+
+  <meta name="description" content="Aplicativo integrado a api para rastreio de encomendas" />
+  <meta name="author" content="Larissa Moro S. Santos" />
+  <meta name="keywords" content="app, layout, correios, rastreio, responsividade, mobile, desktop, site">
+  <meta name="copyright" content="© 2022 Larissa Santos" />
+
+  <meta property="og:title" content="Correios Tracking" />
+  <meta property="og:description" content="Aplicativo integrado a api para rastreio de encomendas">
+  <meta property="og:url" content="https://correiostracking-larimoro20.vercel.app/" />
+  <meta property="og:image" content="https://correiostracking-larimoro20.vercel.app/logo/logotrack.png" />
+
+
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
